--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -324,7 +324,7 @@
     justify-content: space-between;
     align-items: center;
     //border-bottom: 1px solid #e4e4e4;
-    height: 40px;
+    margin: 15px 0;
 
     .case-breadcrumb{
         font-weight: bold;
