web app apiScene function step 调整

--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -351,7 +351,8 @@ table .icon{
 }
 
 .icon-bg-border{
-    background: #fff;
-    border: 1px solid #bfbfbf;
+    background: #0078d4;
+    //border: 1px solid #bfbfbf;
     border-radius: 4px;
 }
+
