--- a/src/test/common/styles/unitcase.scss
+++ b/src/test/common/styles/unitcase.scss
@@ -536,6 +536,15 @@ $backgroud-color: #fff;
     background: #f04949;
 }
 
+.isNotRun{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    background: #c7c7c7;
+}
+
+
 
 
 .history-list{
