用例添加描述，切换项目优化

--- a/src/common/leftMenu/LeftNavMenuStyle.scss
+++ b/src/common/leftMenu/LeftNavMenuStyle.scss
@@ -68,11 +68,6 @@
     position: relative;
     display: flex;
     align-items: center;
-
-    .repository-icon{
-        width:var(--pi-icon-x);
-        height:var(--pi-icon-x);
-    }
 }
 
 
@@ -88,16 +83,21 @@
     overflow: auto;
 
     .ws-hover-item{
-        border-bottom: 1px solid var(--pi-border-color);
         border-radius: var(--pi-border-radius);
         padding: 5px;
         margin: 2px 0 0 0;
         display: flex;
         align-items: center;
+        height: 42px;
     }
 
     .ws-hover-item:hover{
-        background: #f6f6f6;
+        background: var(--pi-hover-color);
+        cursor: pointer;
+    }
+
+    .ws-toggle-ws-select{
+        background: var(--pi-hover-color);
         cursor: pointer;
     }
 
@@ -117,7 +117,7 @@
         text-align: center;
         width: 100%;
         padding: 5px;
-        background: #f0f0f0;
+        background: var(--pi-bg-grey-100);
     }
 
 }
