--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -327,10 +327,8 @@ table .icon{
 
 
 .ws-img-icon{
-    //width: var(--pi-icon-x);
-    //height: var(--pi-icon-x);
-    width: 40px;
-    height: 40px;
+    width: var(--pi-icon-l);
+    height: var(--pi-icon-l);
 }
 
 .teston-show{
@@ -348,12 +346,6 @@ table .icon{
         color: var(--tiklab-blue);
         cursor: pointer;
     }
-}
-
-.icon-bg-border{
-    background: #0078d4;
-    //border: 1px solid #bfbfbf;
-    border-radius: 4px;
 }
 
 .table-list-box{
@@ -492,4 +484,13 @@ table .icon{
         width: 100%;
         margin: 10px 0;
     }
+}
+
+.title-bold{
+    font-weight: bold;
+}
+
+.repository-icon{
+    width:var(--pi-icon-x);
+    height:var(--pi-icon-x);
 }
