--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -120,6 +120,7 @@
         background: #fff;
         //border: 1px solid var(--pi-border-color);
         border-radius: var(--pi-border-radius);
+        min-height: 450px;
     }
 
 }
