--- a/src/test/function/components/functionStyle.scss
+++ b/src/test/function/components/functionStyle.scss
@@ -79,5 +79,12 @@
         display: block;
     }
 
+}
 
+.case-save-cancel-btn{
+    position: absolute;
+    bottom: -15px;
+    left: 15px;
+    background: white;
+    width: 100%;
 }
