--- a/src/setting/message/messageStyle.scss
+++ b/src/setting/message/messageStyle.scss
@@ -91,6 +91,7 @@
     //border-bottom: 1px solid var(--pi-border-color);
 
     .msg-header-menu-item{
+        width: 50px;
         padding: 5px;
         margin: 0 15px 0 0;
         cursor: pointer;
