--- a/src/support/environment/components/envStyle.scss
+++ b/src/support/environment/components/envStyle.scss
@@ -42,3 +42,14 @@
     font-size: 12px!important;
 }
 
+.env-select-box{
+    width: 100%;
+    height: 32px;
+    border-radius: var(--pi-border-radius);
+    border: var(--pi-input-border);
+    border: var(--pi-input-border);
+    background-color: white;
+    font-size: 12px!important;
+}
+
+
