--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4299819 */
-  src: url('iconfont.woff2?t=1710491462500') format('woff2'),
-       url('iconfont.woff?t=1710491462500') format('woff'),
-       url('iconfont.ttf?t=1710491462500') format('truetype'),
-       url('iconfont.svg?t=1710491462500#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1711527436898') format('woff2'),
+       url('iconfont.woff?t=1711527436898') format('woff'),
+       url('iconfont.ttf?t=1711527436898') format('truetype'),
+       url('iconfont.svg?t=1711527436898#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fanhui3:before {
+  content: "\e615";
 }
 
 .icon-icon_level2:before {
