--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -3,10 +3,10 @@
     // 色调
     --thoughtware-white: #fff;  // 主色调白
     --thoughtware-black: #000;  // 主色调黑
-    --thoughtware-blue: #0078d4;  // 主色调蓝
-    --thoughtware-gray-200: #ececec;  // border 的边线
-    --thoughtware-gray-300: #EDF0F5;  // hover颜色
-    --thoughtware-gray-400: #e3e8f0;  // 左侧导航 选中颜色
+    --thoughtware-blue: #0c66e4;  /* 主色调蓝*/
+    --thoughtware-gray-200: #ececec;  /* border 的边线*/
+    --thoughtware-gray-300: #091e420f;  /* hover颜色*/
+    --thoughtware-gray-400: #e9f2ff;  /* 左侧导航 选中颜色*/
     --thoughtware-gray-500: #999; // 文字次级颜色灰色调
     --thoughtware-gray: #efefef; // 主色调灰 左侧导航
 
