--- a/src/home/header/portalStyle.scss
+++ b/src/home/header/portalStyle.scss
@@ -146,7 +146,7 @@
 
 
         .header-menu-item{
-            padding: 10px 6px;
+            padding: 10px 0;
             border-bottom: 3px solid rgba(255, 255, 255, 0);
             text-align: center;
         }
