--- a/src/test/api/http/common/response/responseCommon/responseCommonStyle.scss
+++ b/src/test/api/http/common/response/responseCommon/responseCommonStyle.scss
@@ -1,8 +1,5 @@
 .responseCommon{
-    margin:0 10px;
+    margin: 0 0 0 10px;
     overflow: auto;
-    height: calc(100% - 44px )
-
-
-
+    height: calc(100% - 45px);
 }
