--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -521,3 +521,13 @@ table .icon{
 .header-title{
     font-weight: bold;
 }
+
+.padding-left-right{
+    padding-right:30px;
+    padding-left: 30px;
+}
+
+.padding-top-bottom{
+    padding-top:20px;
+    padding-bottom: 20px;
+}
