--- a/src/home/header/portalStyle.scss
+++ b/src/home/header/portalStyle.scss
@@ -126,9 +126,8 @@
     border-bottom: 1px solid #efefef;
 
     .frame-header-logo{
-        height: 35px;
-        width: 100px;
-        margin:0 20px;
+        height: 25px;
+        width: 25px;
 
         img {
             width: 100%;
@@ -137,6 +136,11 @@
         }
     }
 
+    .productName{
+        font-size: 20px;
+        font-weight: 600;
+
+    }
     .header-menu-box{
         display: flex;
         width: 120px;
@@ -195,6 +199,7 @@
     .pi-header-left{
         display: flex;
         align-items: center;
+        gap: 15px;
     }
 
 
