--- a/src/setting/message/messageStyle.scss
+++ b/src/setting/message/messageStyle.scss
@@ -88,6 +88,7 @@
 
 .msg-select-box{
     display: flex;
+    text-align: center;
     //border-bottom: 1px solid var(--pi-border-color);
 
     .msg-header-menu-item{
