--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -230,47 +230,29 @@ table .icon{
 
     }
 }
-
-.ant-tabs-bottom>.ant-tabs-nav, .ant-tabs-bottom>div>.ant-tabs-nav, .ant-tabs-top>.ant-tabs-nav, .ant-tabs-top>div>.ant-tabs-nav{
-    margin: 0!important;
+.content-box-center{
+    .ant-tabs-bottom>.ant-tabs-nav, .ant-tabs-bottom>div>.ant-tabs-nav, .ant-tabs-top>.ant-tabs-nav, .ant-tabs-top>div>.ant-tabs-nav{
+        margin: 0!important;
+    }
 }
-
-
-
 
 .icon-s {
     width: var(--pi-icon-s);
     height: var(--pi-icon-s);
-    //vertical-align: -0.15em;
-    //fill: currentColor;
-    //overflow: hidden;
-    //margin:0 5px  ;
 }
 
 .icon-m {
     width: var(--pi-icon-m);
     height: var(--pi-icon-m);
-    //vertical-align: -0.15em;
-    //fill: currentColor;
-    //overflow: hidden;
-    //margin:0 5px  ;
 }
 
 .icon-l {
     width: var(--pi-icon-l);
     height: var(--pi-icon-l);
-    //vertical-align: -0.15em;
-    //fill: currentColor;
-    //overflow: hidden;
-    //margin:0 5px  ;
 }
 .icon-x {
     width: var(--pi-icon-x);
     height: var(--pi-icon-x);
-    //vertical-align: -0.15em;
-    //fill: currentColor;
-    //overflow: hidden;
-    //margin:0 5px  ;
 }
 
 //头部公共css  左边title，右边一般添加
@@ -302,7 +284,7 @@ table .icon{
 }
 
 .content-box-center{
-    height: calc(100% - 10px);
+    height: calc(100% - 18px);
     min-width: 760px;
     max-width: 1440px;
     margin: 0 auto;
