--- a/src/home/homestyle.scss
+++ b/src/home/homestyle.scss
@@ -1,9 +1,8 @@
 
-
 .home-content{
     overflow: auto;
-    height: var(--pi-calc-content);
-    background: var(--pi-bg-grey-100);
+    height: 100%;
+    //background: var(--pi-bg-grey-100);
 
     .home-content-box{
         /*width: 800px;*/
