增加新增用例统计，用例测试统计

--- a/src/setting/system/sysMana.scss
+++ b/src/setting/system/sysMana.scss
@@ -18,7 +18,7 @@
         height: 100%;
         width: 240px;
         border-right: 1px solid var(--pi-border-color);
-        //background: var(--pi-greyf9-color);
+        background: var(--pi-greyf9-color);
         overflow: auto;
 
         ul,li {
