--- a/src/home/homestyle.scss
+++ b/src/home/homestyle.scss
@@ -52,6 +52,19 @@
 
         }
 
+
+        .case-test-item{
+            border-radius: 5px;
+            border: 1px solid #e4e4e4;
+            box-shadow: var(--pi-box-shadow);
+            height: 500px;
+        }
+
+        .home-statistics-new-create-box{
+            width: 100%;
+            height: 380px;
+        }
+
     }
 }
 
