--- a/src/home/homestyle.scss
+++ b/src/home/homestyle.scss
@@ -57,7 +57,7 @@
             border-radius: 5px;
             border: 1px solid #e4e4e4;
             box-shadow: var(--pi-box-shadow);
-            height: 500px;
+            height: 470px;
         }
 
         .home-statistics-new-create-box{
@@ -68,64 +68,61 @@
     }
 }
 
-.home-box-item-detail{
-    padding: 10px;
-    min-height: 140px;
+.home-recent-box{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin: 0 0 15px 0;
 
-    .home-recent-box{
-        display: flex;
-        align-items: center;
-
-        .home-recent-item{
-            height: 95px;
-            width: 235px;
-            border-radius: var(--pi-border-radius) ;
-            margin: 0 3px 0 0;
-            background: var(--pi-bg-grey-100);
-            padding: 10px;
-            cursor: pointer;
-            border-bottom: 2px solid #ffffff00;
+    .home-recent-item{
+        height: 95px;
+        width: 235px;
+        border-radius: var(--pi-border-radius) ;
+        margin: 0 3px 0 0;
+        background: var(--pi-bg-grey-100);
+        padding: 10px;
+        cursor: pointer;
+        border-bottom: 2px solid #ffffff00;
 
 
-            &-left{
-                display: flex;
-                align-items: center;
+        &-left{
+            display: flex;
+            align-items: center;
 
-                &-name{
-                    margin: 0 0 0 10px;
-                    font-size: var(--pi-font-size-16);
-                    font-weight: bold;
-                    width: 100%;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
-            }
-
-
-            &-num{
-                padding: 15px 0 0 0;
-                display: flex;
-                align-items: center;
-                font-size: 12px;
-
-                &-title{
-                    color: #9b9b9b;
-                    margin: 0 10px 0 0;
-                }
+            &-name{
+                margin: 0 0 0 10px;
+                font-size: var(--pi-font-size-16);
+                font-weight: bold;
+                width: 100%;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
 
-        .home-recent-item:hover{
-            border-radius: var(--pi-border-radius) var(--pi-border-radius) 0 0;
-            border-bottom: 2px solid var(--pi-base-color);
-            transition: 1s;
-        }
 
-        .ant-empty{
-            margin: 0 auto;
-        }
+        &-num{
+            padding: 15px 0 0 0;
+            display: flex;
+            align-items: center;
+            font-size: 12px;
 
+            &-title{
+                color: #9b9b9b;
+                margin: 0 10px 0 0;
+            }
+        }
     }
+
+    .home-recent-item:hover{
+        border-radius: var(--pi-border-radius) var(--pi-border-radius) 0 0;
+        border-bottom: 2px solid var(--pi-base-color);
+        transition: 1s;
+    }
+
+    .ant-empty{
+        margin: 0 auto;
+    }
+
 }
 
 .home-list-item{
