--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -93,7 +93,7 @@
 
 
         &-item{
-            width: 260px;
+            //width: 260px;
             text-align: center;
             background: var(--pi-bg-grey-100);
             border-radius: 5px;
