--- a/src/repository/repository/components/repository.scss
+++ b/src/repository/repository/components/repository.scss
@@ -99,7 +99,7 @@ ul{
     height: 45px;
     align-items: center;
     justify-content: space-between;
-    //border-bottom: 1px solid  var(--pi-border-color);
+    margin: 30px 0 15px 0;
 
     .ws-header-menu-left{
         display: flex;
