--- a/src/setting/system/sysMana.scss
+++ b/src/setting/system/sysMana.scss
@@ -136,7 +136,7 @@
 
 
 .system-home{
-    width: 1024px;
+    //width: 1024px;
     padding: 20px;
     margin: 0 auto;
 
@@ -144,32 +144,70 @@
         padding:10px;
     }
 
-    .system-menu-box{
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        padding: 5px 0;
-        margin: 5px 0 20px 0;
+    .system-module{
+        padding: 10px;
+        //background: #f5f4f4;
+        margin: 10px;
+        border-radius: 5px;
+    }
 
-        .system-menu-item{
-            background: var(--pi-bg-grey-100);
-            width: 195px;
-            height: 90px;
+    .system-role-module{
+        padding: 10px;
+        margin: 10px;
+        border-radius: 5px;
+
+        .system-role{
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: space-around;
+            align-items: center;
+            //padding: 5px 0;
+            margin: 5px 0 0 0;
+            background: #f5f4f4;
+            border: 1px solid #e8e8e8;
+            background: var(--pi-bg-grey-100);
             padding: 10px;
             border-radius: 5px;
-            border: 1px solid #e8e8e8;
-
-
-            &:hover{
-                cursor: pointer;
-            }
         }
     }
 
+
+
+
+    .system-menu-box{
+        //display: flex;
+        //align-items: center;
+        //gap: 10px;
+        padding: 5px 0;
+        margin: 5px 0 0 0;
+    }
+    .system-menu-role{
+        height: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 10px;
+        border-radius: 5px;
+        //border: 1px solid #e8e8e8;
+    }
+
+    .system-menu-item{
+        background: var(--pi-bg-grey-100);
+        //width: 195px;
+        height: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #e8e8e8;
+
+
+        &:hover{
+            cursor: pointer;
+        }
+    }
 }
 
 
