用例执行统计

--- a/src/home/homestyle.scss
+++ b/src/home/homestyle.scss
@@ -61,7 +61,7 @@
             border-radius: 5px;
         }
 
-        .case-test-item{
+        .statistic-card-item{
             border-radius: 5px;
             height: 470px;
             background: #f8f8f8;
