--- a/src/repository/common/repositoryDetailStyle.scss
+++ b/src/repository/common/repositoryDetailStyle.scss
@@ -87,7 +87,7 @@
         background: #fff;
 
 
-        .case-test-item{
+        .statistic-card-item{
             border-radius: 5px;
             height: 470px;
             background: #f8f8f8;
