--- a/src/statistics/common/statisticsStyle.scss
+++ b/src/statistics/common/statisticsStyle.scss
@@ -47,13 +47,11 @@
             border: 1px solid #e4e4e4;
             box-shadow: var(--pi-box-shadow);
         }
-
-        .case-test-item{
-            border-radius: 5px;
-            border: 1px solid #e4e4e4;
-            box-shadow: var(--pi-box-shadow);
-        }
     }
-
 }
 
+.statistic-card-item{
+    border-radius: 5px;
+    height: 470px;
+    background: #f8f8f8;
+}
