--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -20,7 +20,6 @@
     --thoughtware-font-12: 12px; // 图文排需要的文字
     --thoughtware-font-13: 13px;  // 描述文字
     --thoughtware-font-14: 14px; // 正文
-    --thoughtware-font-15: 15px; // 2级标题
     --thoughtware-font-16: 16px; // 标题
 
     // 图标大小
@@ -42,7 +41,7 @@
     --pi-hover-color:var(--thoughtware-gray-300); //hover颜色
     --pi-action-color:var(--thoughtware-gray-400); //选中
 
-    --pi-font-color-grey:#a3a3a3;
+    --pi-font-color-grey: #888;
 
     --pi-background-color:#f6f8fa;
 
