--- a/src/test/common/styles/caseContantStyle.scss
+++ b/src/test/common/styles/caseContantStyle.scss
@@ -442,7 +442,7 @@
 
         .ant-form-item-label > label{
             color: rgb(151 151 151 / 85%);
-            font-size: 13px;
+            //font-size: 13px;
         }
 
         .ant-form-item-control-input .ant-select .ant-select-selector{
