--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4299819 */
-  src: url('iconfont.woff2?t=1721824053181') format('woff2'),
-       url('iconfont.woff?t=1721824053181') format('woff'),
-       url('iconfont.ttf?t=1721824053181') format('truetype'),
-       url('iconfont.svg?t=1721824053181#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1722244618943') format('woff2'),
+       url('iconfont.woff?t=1722244618943') format('woff'),
+       url('iconfont.ttf?t=1722244618943') format('truetype'),
+       url('iconfont.svg?t=1722244618943#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-sousuo:before {
+  content: "\e79b";
+}
+
+.icon-bofang:before {
+  content: "\e613";
 }
 
 .icon-xiaoxitongzhi:before {
