--- a/src/common/pagination/page.scss
+++ b/src/common/pagination/page.scss
@@ -1,7 +1,17 @@
 .pagination-box{
-    width: 100%;
-    text-align: center;
     padding-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .pagination-total-record{
+        font-size: 12px;
+        color: var(--pi-font-color-grey);
+        width: 50px;
+        margin: 0 20px 0 0
+    }
+
+
     .pagination-box-ban{
         cursor:not-allowed;
         color: var(--thoughtware-gray-500);
