--- a/src/common/select/Select.scss
+++ b/src/common/select/Select.scss
@@ -8,8 +8,8 @@
 .select-view {
     position: relative;
     cursor: pointer;
-    width: 150px;
-    background: #f4f5f7;
+    width: 120px;
+    background: var(--pi-bg-grey-100);
     height: 31px;
     border-radius: 4px;
     padding: 0 10px;
