--- a/src/test/common/styles/testcaseStyle.scss
+++ b/src/test/common/styles/testcaseStyle.scss
@@ -23,13 +23,13 @@
 
 }
 
-.dynamic-select-box-item{
+.filter-select-box-item{
     width: 150px;
 
     .ant-select-selector{
         border-radius: var(--pi-border-radius)!important;
         border: none!important;
-        background-color: #f4f5f7!important;
+        background-color: var(--pi-bg-grey-100)!important;
     }
 }
 
@@ -209,7 +209,7 @@
     margin:0 0 20px 0;
 
     .ant-form-item-label > label{
-        font-size: 12px;
+        //font-size: 12px;
         color: #a0a0a0;
     }
 
@@ -306,7 +306,7 @@
 .case-table-case-type{
     width: 60px;
     text-align: center;
-    background: #f2f2f2;
+    background: var(--pi-bg-grey-100);
     padding: 3px;
     font-size: 12px;
     border-radius: 5px;
@@ -405,7 +405,7 @@
     }
 
     .ant-form-item-label > label{
-        font-size: 12px;
+        //font-size: 12px;
         color: #8a8a8a;
     }
 
@@ -431,7 +431,7 @@
     }
 
     .ant-form-item-label > label{
-        font-size: 12px;
+        //font-size: 12px;
         color: #8a8a8a;
     }
 }
